--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,7 +1,7 @@
 - hosts: main
   roles:
     # - hostname
-    # - essentials
+    - essentials
     # - security
     # - kerneltweaks
     # - mkcert
