--- a/ansible/security/files/nftables.conf
+++ b/ansible/security/files/nftables.conf
@@ -14,6 +14,9 @@ table inet filter{
         # Allow traffic on port 44422
         iifname "ens3" tcp dport 44422 ct state new accept
 
+        # Allow traffic on port 22
+        iifname "ens3" tcp dport 22 ct state new accept
+
 
 
         # Allow icmp traffic (ping, etc)
