--- a/ansible/setup.yml
+++ b/ansible/setup.yml
@@ -1,9 +1,10 @@
 - hosts: main
   roles:
     # - hostname
-    - essentials
+    # - essentials
     # - security
     # - kerneltweaks
     # - mkcert
     # - docker
-    - mariadb
+    # - mariadb
+    - lxc
