--- a/ansible/lxc/tasks/main.yml
+++ b/ansible/lxc/tasks/main.yml
@@ -1,3 +1,36 @@
 - name: Install packages
   apt:
-    
+    update_cache: yes
+    name: 
+      - lxc
+      - lxc-templates
+      - debootstrap
+    state: present
+  become: yes
+
+- name: create lxc config directory
+  file:
+    path: /etc/lxc
+    state: directory
+    owner: root
+    group: root
+    mode: '755'
+  become: yes
+
+- name: copy default config
+  copy:
+    src: files/default.conf
+    dest: /etc/lxc/default.conf
+    owner: root
+    group: root
+    mode: '644'
+  become: yes
+
+- name: create backups directory
+  file:
+    path: /mnt/storage/backups/lxc
+    state: directory
+    owner: root
+    group: root
+    mode: '700'
+  become: yes
