--- a/ansible/lxc/tasks/main.yml
+++ b/ansible/lxc/tasks/main.yml
@@ -31,14 +31,14 @@
   become: yes
 
 # create backups directory -- commented out after mounting
-- name: Create backups directory
-  ansible.builtin.file:
-    path: /mnt/storage/backups/lxc
-    owner: root
-    group: root
-    mode: '700'
-    state: directory
-  become: yes
+# - name: Create backups directory
+#   ansible.builtin.file:
+#     path: /mnt/storage/backups/lxc
+#     owner: root
+#     group: root
+#     mode: '700'
+#     state: directory
+#   become: yes
 
 
 - name: .env-lxc-backups
